--- a/view/preview.html
+++ b/view/preview.html
@@ -7,44 +7,50 @@
 <body class="body">
 
 
-<div id="docer">
+    <div id="docer">
 
-    <div class="navbar-fixed-top top-bar">
-        {{template "TitleTemp" .}}
-        <div class="tool-bar">
+        <div class="navbar-fixed-top top-bar">
+            {{template "TitleTemp" .}}
+            <!-- <div class="tool-bar">
             <a v-bind:href="'/edit/'+article.file" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+        </div> -->
         </div>
-    </div>
-    <div class="container content">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>${article.title}</h1>
-                <div v-for="(chapter,i) in article.chapters">
-                    <h2 v-if="chapter.level == 1">${++index +1}.${chapter.title}</h2>
-                    <h3 v-if="chapter.level == 2">${index+1}.${++level[index][0]}.${chapter.title}</h3>
-                    <h4 v-if="chapter.level == 3">${index+1}.${level[index][0]}.${++level[index][1]}.${chapter.title}</h4>
-                    <h5 v-if="chapter.level == 4">${index+1}.${level[index][0]}.${level[index][1]}.${++level[index][2]}.${chapter.title}</h5>
-                    <h6 v-if="chapter.level == 5">${index+1}.${level[index][0]}.${level[index][1]}.${level[index][2]}.${++level[index][3]}.${chapter.title}</h6>
-                    <!-- <p v-for="line in chapter.lines"> -->
-                        <p>
-                        <span v-for="line in chapter.lines">${line.content}
-                        <label v-if="reference.id == line.reference" v-for="(reference,i) in article.references">[${i+1}]</label></span></p>
+        <div class="container content">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>${article.title}</h1>
+                    <div v-for="(chapter,i) in article.chapters">
+                        <h2 v-if="chapter.level == 1">${++index +1}.${chapter.title}</h2>
+                        <h3 v-if="chapter.level == 2">${index+1}.${++level[index][0]}.${chapter.title}</h3>
+                        <h4 v-if="chapter.level == 3">
+                            ${index+1}.${level[index][0]}.${++level[index][1]}.${chapter.title}</h4>
+                        <h5 v-if="chapter.level == 4">
+                            ${index+1}.${level[index][0]}.${level[index][1]}.${++level[index][2]}.${chapter.title}</h5>
+                        <h6 v-if="chapter.level == 5">
+                            ${index+1}.${level[index][0]}.${level[index][1]}.${level[index][2]}.${++level[index][3]}.${chapter.title}
+                        </h6>
+                        <!-- <p v-for="line in chapter.lines"> -->
+                        <p v-for="line in chapter.lines">
+                            ${line.content}
+                            <span v-if="reference.id == line.reference"
+                                v-for="(reference,i) in article.references">[${i+1}]</span>
+                        </p>
+                    </div>
+                    <h2>参考文献</h2>
+                    <p v-for="(reference,i) in article.references" v-if="reference.text">[${i+1}] ${reference.text}</p>
                 </div>
-                <h2>参考文献</h2>
-                <p v-for="(reference,i) in article.references" v-if="reference.text">[${i+1}] ${reference.text}</p>
+
+
             </div>
 
-
         </div>
 
     </div>
-
-</div>
 </body>
 
 <script src="/public/js/docer_preview.js"></script>
 <script>
-    vm.getArticle({{.filename}});
+    vm.getArticle({{.filename }});
     var index = -1;
 </script>
 
