--- a/public/css/docer.css
+++ b/public/css/docer.css
@@ -12,9 +12,7 @@
 
 .tool-bar {
     background: #efefef;
-    padding: 3px 15px;
-    border-bottom: 1px solid #e3e3e3;
-    border-top: 1px solid #e3e3e3;
+    padding: 5px;
 }
 
 footer {
@@ -26,7 +24,7 @@ footer {
 .chapter {
     padding: 5px 0px 0px 0px;
     border-bottom: 1px dashed #e3e3e3;
-    border-right: 1px dashed #e3e3e3;
+    /* border-right: 1px dashed #e3e3e3; */
 }
 
 /*.references {*/
@@ -53,18 +51,18 @@ select:hover {
 }
 
 .title {
-    /*border-bottom: 1px solid #e3e3e3;*/
+    /* border-bottom: 1px solid #bbbbbb; */
     /*border-top: 1px solid #000;*/
     background: #efefef;
     color: black;
-    height: 60px;
+    height: 40px;
     /*padding: 5px 50px 5px 15px;*/
     /*font-size: 14px;*/
     /*line-height: 1.5;*/
 }
 
 .title-txt {
-    padding-top: 35px;
+    padding-top: 10px;
     padding-right: 10px;
 }
 
@@ -96,7 +94,7 @@ span {
 .logo {
     height: 100%;
     background: RoyalBlue;
-    padding: 33px 5px 0px 3px;
+    padding: 10px 8px 0px 7px;
 }
 
 .logo a {
@@ -145,7 +143,7 @@ a {
 
 .content {
     margin-bottom: 30px;
-    margin-top: 105px;
+    margin-top: 48px;
     padding-bottom: 15px;
 }
 
@@ -211,4 +209,8 @@ a {
 
 .line:hover{
     background: #e3e3e3;
+}
+
+label{
+    margin: 0px;
 }
