--- a/view/doc.html
+++ b/view/doc.html
@@ -82,31 +82,25 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title" id="filenameModalLabel">新建</h4>
+                        <h3 class="modal-title" id="filenameModalLabel">新建</h3>
                     </div>
-                    <div class="modal-body">
-                        <input type="text" class="form-control" v-model="newFilename">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal"
-                            v-on:click="newArticle(newFilename)">确定
-                        </button>
-                    </div>
+                    <form method="get" v-bind:action="'/edit/'+newFilename">
+                        <div class="modal-body">
+                            <input type="text" class="form-control" v-model="newFilename" required="required" autofocus>
+                            <input type="hidden" name="create" value="1">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="submit" class="btn btn-primary">确定</button>
+                        </div>
+                    </form>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
         </div>
         <!--modal end-->
-        <div class="navbar-fixed-top top-bar">
-            {{template "TitleTemp" .}}
-            {{template "ToolTemp" .}}
-            <div class="alert" id="alert" style="display: none;margin: 0px;">
-                <a href="#" class="close" data-dismiss="alert">
-                    &times;
-                </a>
-                <strong>${alert}</strong>
-            </div>
-        </div>
+        <!-- toolbar -->
+        {{template "ToolTemp" .}}
+        <!-- main -->
         <div class="container-fluid content">
             <div class="row border-bottom" style="padding-bottom: 7px;">
                 <div class="col-md-12">
@@ -114,13 +108,6 @@
                     <input v-model="article.title" type="text" id="title" @keyup.down="downTitle()" class="form-control"
                         placeholder="标题">
                 </div>
-                <!--<div class="col-md-12">
-        <div class="input-group input-group-sm p-3">
-            <span class="input-group-addon">输入：</span>
-            <input v-model="content" type="text" id="title" @keyup.down="downTitle()" class="form-control">
-        </div>
-
-    </div>-->
             </div>
             <!-- <div class="row border-bottom">
             <div class="col-xs-4 col-md-3">
@@ -133,8 +120,6 @@
                 <h4>引用</h4>
             </div>
         </div> -->
-
-
             <div class="row chapter" v-for="(chapter,i) in article.chapters">
                 <div class="col-xs-12 col-md-3">
                     <div class="input-group input-group-sm p-2">
