--- a/view/tool.html
+++ b/view/tool.html
@@ -14,19 +14,19 @@
                     <span class="glyphicon glyphicon-home"></span>
                 </a> -->
                 <button type="button" style="margin-left: 5px;" class="btn btn-default btn-sm" v-on:click="confirmArticle();">
-                    <span class="glyphicon glyphicon-file"></span> 新建
+                    <span class="glyphicon glyphicon-file"></span> 
                 </button>
                 <button type="button" class="btn btn-default btn-sm" v-on:click="showArticles()">
-                    <span class="glyphicon glyphicon-folder-open"></span> 打开
+                    <span class="glyphicon glyphicon-folder-open"></span> 
                 </button>
                 <button type="button" class="btn btn-default btn-sm" v-on:click="postArticle()">
-                    <span class="glyphicon glyphicon-floppy-disk"></span> 保存
+                    <span class="glyphicon glyphicon-floppy-disk"></span> 
                 </button>
                 <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#saveModal">
-                    <span class="glyphicon glyphicon-floppy-open"></span> 另存为
+                    <span class="glyphicon glyphicon-floppy-open"></span> 
                 </button>
                 <a class="btn btn-default btn-sm" v-bind:href="'/preview/'+article.file">
-                    <span class="glyphicon glyphicon-eye-open"></span> 预览
+                    <span class="glyphicon glyphicon-eye-open"></span> 
                 </a>
                 <!-- <button type="button" class="btn btn-default btn-sm">
                                     打开
