modify tool bar

--- a/view/tool.html
+++ b/view/tool.html
@@ -32,7 +32,7 @@
                                     打开
                                 </button> -->
                 <button type="button" class="btn btn-default btn-sm" v-on:click="addReference(-1)">
-                    <span class="glyphicon glyphicon-link"></span> 引用
+                    <span class="glyphicon glyphicon-link"></span> 
                 </button>
 
 
